chore: general fixes for equipment-requests
